fixed game status overflow div and added movie poster modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ p {
 	padding-bottom: 50px;
 }
 
+#movie-poster {
+	height: 500px;
+	width: 400px;
+}
 /*--------------------------------------------------------------------------------------------------------------------------------------*/
 
 /*Chat Box*/
@@ -125,13 +129,12 @@ p {
 
 #game-status-div {
 	width: 90%;
-	height: 250px;
+	min-height: 200px;
 	background-color: white;
 	margin: 0 auto;
 	position: relative;
 	margin-top: 30px;
-	border-radius: 20px
-
+	border-radius: 20px;
 }
 
 #time-remaining-header {
@@ -207,6 +210,7 @@ p {
 
 #hinter-chat > p {
 	margin-left: 25px;
+	margin-right: 10px;
 	margin-top: 10px;
 }
 
